Overlay for i9300 - Show Expanded Desktop preference

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -21,4 +21,7 @@
 
     <!-- Dock Settings -->
     <bool name="has_dock_settings">true</bool>
+
+    <!-- Show Expanded Desktop preference -->
+    <bool name="config_show_expandedDesktop">true</bool>
 </resources>
