--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -18,4 +18,6 @@
 <resources xmlns:xliff="urnasis:names:tc:xliff:document:1.2 ">
     <!-- Volume Rocker Wake -->
     <bool name="config_show_volumeRockerWake">true</bool>
+    <!-- Home Key Wake -->
+    <bool name="config_show_homeWake">true</bool>
 </resources>
