--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -18,6 +18,6 @@
 */
 -->
 <resources>
-    <!-- Pie service: Thickness of the active trigger fields around the screen border -->
-    <dimen name="pie_trigger_thickness">15dp</dimen>
+    <!-- Pie service: Thickness of the active trigger fields around the screen border 
+    <dimen name="pie_trigger_thickness">15dp</dimen> -->
 </resources>
